# sel_map_gpr

./: .gitignore  .gitmodules
mesh_tools/rviz_map_plugin/src/: MeshDisplay.cpp  MeshVisual.cpp
sel_map/: CMakeLists.txt  package.xml
sel_map/config/robots/: husky_config.yaml
sel_map/config/semseg/: Apple_ResNet50_DMS_full.yaml  MMSFormer_MCubeS.yaml
sel_map/config/terrain_properties/: ade20k_properties.yaml  dms_properties.yaml  mcubes_properties.yaml
sel_map/launch/: husky_bag_sel.launch
sel_map/rviz/: spot.rviz
sel_map/scripts/: main.py
sel_map_mapper/src/sel_map_mapper/: elmap.py
sel_map_mesh/include/sel_map_mesh/: Element.hpp  TriangularMesh.hpp
sel_map_mesh/src/: Element.cpp  TriangularMesh.cpp  py_wrapper.cpp
sel_map_mesh/src/sel_map_mesh/: TriangularMesh.py
sel_map_segmentation/: .gitignore
sel_map_segmentation/apple_dense_materials_wrapper/: CMakeLists.txt  package.xml  setup.py
sel_map_segmentation/apple_dense_materials_wrapper/src/apple_dense_materials_wrapper/: DenseMaterialsSegmentationNetwork.py  __init__.py
sel_map_segmentation/mmsformer_wrapper/: CMakeLists.txt  package.xml  setup.py
sel_map_segmentation/mmsformer_wrapper/src/mmsformer_wrapper/: MMSFormerWrapper.py  __init__.py
sel_map_segmentation/pytorch_encoding_wrapper/: CMakeLists.txt
sel_map_segmentation/pytorch_encoding_wrapper/src/pytorch_encoding_wrapper/: PytorchEncodingWrapper.py
sel_map_segmentation/sel_map_segmentation/scripts/: eval_semseg.py  semseg_image.py
sel_map_segmentation/sel_map_segmentation/src/sel_map_segmentation/: BypassWrapper.py  GPRSensor.py  __init__.py  alexnet.py  cameraSensor.py
